integration/manifests/webhook/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: danm-webhook-config
  namespace: kube-system
webhooks:
  - name: danm-netvalidation.danm.io
    clientConfig:
      service:
        name: danm-webhook-svc
        namespace: kube-system
        path: "/netvalidation"
      # Configure your pre-generated certificate matching the details of your environment
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["danm.io"]
        apiVersions: ["v1"]
        resources: ["danmnets", "clusternetworks", "tenantnetworks"]
    failurePolicy: Fail
    timeoutSeconds: 25
    sideEffects: None
    admissionReviewVersions:
    - "v1beta1"
  - name: danm-configvalidation.danm.io
    clientConfig:
      service:
        name: danm-webhook-svc
        namespace: kube-system
        path: "/confvalidation"
      # Configure your pre-generated certificate matching the details of your environment
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["danm.io"]
        apiVersions: ["v1"]
        resources: ["tenantconfigs"]
    failurePolicy: Fail
    timeoutSeconds: 25
    sideEffects: None
    admissionReviewVersions:
    - "v1beta1"
  - name: danm-netdeletion.danm.io
    clientConfig:
      service:
        name: danm-webhook-svc
        namespace: kube-system
        path: "/netdeletion"
      # Configure your pre-generated certificate matching the details of your environment
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: ["DELETE"]
        apiGroups: ["danm.io"]
        apiVersions: ["v1"]
        resources: ["danmnets", "clusternetworks", "tenantnetworks"]
    failurePolicy: Fail
    timeoutSeconds: 25
    sideEffects: None
    admissionReviewVersions:
    - "v1beta1"
  - name: reservedipvalidation.danm.io
    clientConfig:
      service:
        name: danm-webhook-svc
        namespace: kube-system
        path: "/reservedip"
      # Configure your pre-generated certificate matching the details of your environment
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["danm.io"]
        apiVersions: ["v1"]
        resources: ["reservedips"]
    failurePolicy: Fail
    timeoutSeconds: 25
    sideEffects: NoneOnDryRun
    admissionReviewVersions:
    - "v1beta1"
---
apiVersion: v1
kind: Service
metadata:
  name: danm-webhook-svc
  namespace: kube-system
  labels:
    danm: webhook
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8443
  selector:
    danm: webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: danm-webhook-deployment
  namespace: kube-system
  labels:
    danm: webhook
spec:
  selector:
    matchLabels:
     danm: webhook
  template:
    metadata:
      name: danm-webhook
      labels:
        danm: webhook
    spec:
      serviceAccountName: danm-webhook
      containers:
        - name: danm-webhook
          image: webhook
          command: ["/usr/local/bin/webhook", "-tls-cert-bundle=/etc/webhook/certs/cert", "-tls-private-key-file=/etc/webhook/certs/key", "bind-port=8443"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
     # Configure the directory holding the Webhook's server certificates
      volumes:
        - name: webhook-certs
          secret:
            secretName: danm-webhook-certs
